# schale-inventory-management

./: .eslintrc.json  .gitignore  .stylelintrc.json  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: azure-static-web-apps-mango-sea-05aa22700.yml
public/locales/en/: ControlPane.json  Error.json  Header.json  ItemPane.json  MainArea.json  Note.json  NotificationPanel.json  PlacedItemPane.json  Share.json
public/locales/ja/: ControlPane.json  Header.json  MainArea.json  Note.json  NotificationPanel.json  PlacedItemPane.json  Share.json
public/locales/jp/: Error.json  Header.json  ItemPane.json  MainArea.json  Note.json  NotificationPanel.json
public/locales/ko/: ControlPane.json  Error.json  Header.json  ItemPane.json  MainArea.json  Note.json  NotificationPanel.json  PlacedItemPane.json  Share.json
public/locales/zh-CN/: ControlPane.json  Error.json  Header.json  ItemPane.json  MainArea.json  Note.json  NotificationPanel.json  PlacedItemPane.json  Share.json
simulator/: Cargo.toml  result.txt
simulator/src/: generator.rs  main.rs  simulator.rs
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src/components/: Board.css  Board.tsx  ControlPane.tsx  Cover.tsx  Header.tsx  InitWasm.tsx  ItemPane.tsx  MainArea.tsx  Note.tsx  NotificationPanel.tsx  Overlay.css  Overlay.tsx  OverlayProvider.tsx  PlaceSelectHelper.tsx  PlacedItemPane.tsx  PlacedItemSquare.tsx  ShareButton.tsx
wasm/: Cargo.toml
wasm/src/: grid.rs  lib.rs  problem.rs  solver.rs  utils.rs
wasm/src/solver/: counter.rs
(+7 files in other folders)
