[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"
wasm-solver = { path = "../wasm" }
