[package]
name = "wasm"
version = "0.1.0"
authors = ["terry-u16 <terry-u16@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
num-traits = "0.2.18"
itertools = "0.12.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_pcg = "0.3.1"
getrandom = { version = "0.2.14", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
